signin, signup and reset-password screens

--- a/src/styles/global/variable.scss
+++ b/src/styles/global/variable.scss
@@ -1,6 +1,6 @@
 /* Colors ------------------------- */
 $mn-primary-color: #1890ff;
-$mn-background-color: #d9d9d9;
+$mn-background-color: #F0F2F5;
 
 /* Screens
   * ------------------------- */
