--- a/src/styles/global/variable.scss
+++ b/src/styles/global/variable.scss
@@ -1,6 +1,8 @@
 /* Colors ------------------------- */
 $mn-primary-color: #1890ff;
 $mn-background-color: #F0F2F5;
+$mn-background-header: #001529;
+$mn-white-text:#FFF;
 
 /* Screens
   * ------------------------- */
@@ -43,3 +45,8 @@ $mn-spacing-xgiant: 80px;
     * ------------------------- */
 $mn-spacing-xsmall: 0.4rem;
 $mn-spacing-base: 1.6rem;
+$mn-font-family: 'Roboto', sans-serif;
+$mn-font-weight-regular: 400;
+$mn-font-weight-medium: 500;
+$mn-font-weight-bold: 700;
+$mn-font-weight-bolder: 900;
